[gd_scene load_steps=10 format=2]

[ext_resource path="res://scene/Menu.gd" type="Script" id=1]
[ext_resource path="res://resource/raw_fonts/Raleway/Raleway-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resource/raw_fonts/Raleway/Raleway-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resource/art/UI/helpButton.png" type="Texture" id=4]
[ext_resource path="res://resource/art/UI/closeButton.png" type="Texture" id=5]
[ext_resource path="res://resource/raw_fonts/Raleway/Raleway-Black.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 6 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 2.3916
margin_top = 183.684
margin_right = 1919.39
margin_bottom = 787.684
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1916.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
text = "Dark Forest"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_left = 558.0
margin_top = 404.0
margin_right = 1358.0
margin_bottom = 604.0
rect_min_size = Vector2( 800, 200 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="AboutMenu" type="ToolButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -220.774
margin_right = -0.773926
margin_bottom = 208.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 4 )
flat = false

[node name="CloseButton" type="ToolButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -102.0
margin_top = 8.0
margin_right = 110.0
margin_bottom = 216.0
rect_scale = Vector2( 0.42, 0.42 )
icon = ExtResource( 5 )
flat = false

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -481.092
margin_top = -124.742
margin_right = -11.0916
margin_bottom = 107.258
rect_scale = Vector2( 2, 2 )
window_title = "Help"

[node name="TextEdit" type="TextEdit" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 142.412
margin_top = 38.1722
margin_right = -126.588
margin_bottom = -42.8278
custom_fonts/font = SubResource( 3 )
text = "This is designed by
	 nalleyer
	 HubertSun7
	 kleon
Please enjoy it !"
context_menu_enabled = false
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="AboutMenu" to="." method="_on_AboutMenu_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
